# ChangeLog for app-misc/cls-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cls-meta-10.0.ebuild, -cls-meta-10.0.1.ebuild, -cls-meta-10.2-r1.ebuild,
  -cls-meta-10.3.91.ebuild:
  Remove old meta packages.

  10 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cls-meta-10.5.83.ebuild:
  Change dhcpcd to dhcp

*cls-meta-10.5.83 (02 Jun 2010)

  02 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cls-meta-10.5.82.ebuild, +cls-meta-10.5.83.ebuild:
  version bump

*cls-meta-10.5.82 (27 May 2010)

  27 May 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cls-meta-10.5.82.ebuild:
  version bump

*cls-meta-10.4 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cls-meta-10.4.ebuild:
  Bump version.

  01 Apr 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> cls-meta-10.3.91.ebuild:
  Added media-fonts/dejavu

  30 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cls-meta-10.0.ebuild:
  Added openbox.

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cls-meta-10.0.ebuild,+metadata.xml:
  Meta package for CLS.