@@ -1,0 +1,2 @@
+EBUILD cl-base-meta-10.5.83.ebuild 585 RMD160 775b7a1cb2922a43a45776417b0f7c6bbb19a286 SHA1 608b0b55d535a2743159e8dcd9655ff326eceda2 SHA256 1a0a9324c04cddc043cf0c8dc392fec9493ab03d05c1a4890c2b268af5507c37
+MISC ChangeLog 281 RMD160 078e974007d11b01f47b13bcd966a5381d061c01 SHA1 4ceb3b62f752479738b09a17b8adb0dbc11f830c SHA256 094f4f270addf761fa0e23e896c3b9342415887de3b34b13f8243e66da66be1b
