@@ -1,4 +1,4 @@
 EBUILD cls-meta-10.4.ebuild 3008 RMD160 f50d18a52025be21c20c45a6e0d14e1b85f97e59 SHA1 1d1f925d43fb9c608d18b9c2f251e4906e444a76 SHA256 62d50e9a3165c75175b7095947a7a1102e46c93559a684e95f7d75dc8ddeb5ea
-EBUILD cls-meta-10.5.83.ebuild 1408 RMD160 46eb66a65a83c828518e3fa45d0fb20328609ef3 SHA1 70404a760bab89812df194f7709f5a8298f54822 SHA256 e628253a934343a21c012be4dba14c9b1bd15d3bbcbfdfc1695f6a992436180e
-MISC ChangeLog 1229 RMD160 42aa4a964adff4dc3bb9f70a4a0e71e252f0d881 SHA1 6d4405d7c80079e3607e2676200ce960320acd5c SHA256 e962552b958efce9b818b34b27664233682c8030ba2d16156843a0b939c694d2
+EBUILD cls-meta-10.5.83.ebuild 1414 RMD160 737348057d8e4e37adbef4c1f1b58db6d5d42e7b SHA1 58df2bacaa6ea4311835c733e33b7e0570168b35 SHA256 140214eba9f8da2d2f28b1be82dafa799091498ed72b3c2d8c7a55885f371fe0
+MISC ChangeLog 1365 RMD160 880688eda20bf69378aeacb1466f5a8e4c7b92d1 SHA1 b3ae6f9a0ceb9547a375647092ff6c1356cdef45 SHA256 71d95f217813f383db16388f201f6ece08987c684554a428179a9eeacfaa367c
 MISC metadata.xml 257 RMD160 ba1d3308ea944e3f4e2d6c968edfc6abbc32261e SHA1 557e2138324d0aa8db3a282eeeadc88f5b061408 SHA256 6e5c9e82d9d3bdd7855fde47d4d5edaec61251e84a271bd08e64f17008d3e07a
