@@ -1,2 +1,2 @@
-EBUILD css-meta-10.5.83.ebuild 1112 RMD160 f93a3a367938caa6b61a13be3aafafe949b5ec88 SHA1 26123c5e28806ad10483a5c8e409d6d4e25425a7 SHA256 bcf9ef2ed4d554afdbf3524bf155fd4935a8882656e2a4145fafe88cbe00dda8
-MISC ChangeLog 475 RMD160 ad8335184e269a073a7686b1d857dfbd2c95eb86 SHA1 06022d517c58fadd27aa1a60df44e60740798b20 SHA256 b55bd12f14cf0c18333c918c3fcccbd2ffdc920283fac142f86f5960be4d6d92
+EBUILD css-meta-10.5.83.ebuild 886 RMD160 30dbc61cdbf213b64530a37c1337a679abad0679 SHA1 d72343b251d6901446ff4dbc652b99752bad71ac SHA256 a7e19c96ab5bd57f3aa8ff6430ae48ed1d439ce5783c24835d9baaf1334dc9c2
+MISC ChangeLog 589 RMD160 7bce563a24c60ef0452b67accbb34843644e2caf SHA1 dcc6eb77963ac02af56e2757ada1c869725ef250 SHA256 672f40ccbe8415eaf8a4953fe60b2fcf0a5601a3a7481a5085cb9de2812aa57c
