@@ -21,7 +21,6 @@ media-gfx/ufraw gimp
 media-libs/libsdl custom-cflags
 media-video/ffmpeg custom-cflags threads
 net-libs/xulrunner custom-optimization
-net-misc/dhcp minimal
 net-print/foo2zjs -foomaticdb
 net-print/hplip fax -X -qt3 -qt4 gtk ppds static-ppds new-hpcups hpijs
 net-wireless/wpa_supplicant -qt4
