@@ -1,0 +1,10 @@
+# ChangeLog for app-misc/cl-base-meta
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*cl-base-meta-10.5.83 (03 Aug 2010)
+
+  03 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cl-base-meta-10.5.83.ebuild:
+  bump new meta-package
+
