@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  css-meta-10.5.83.ebuild:
+  Added cl-base-meta
+
   11 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   css-meta-10.5.83.ebuild:
   Added fplugd.
