@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cls-meta-10.5.83.ebuild:
+  Changed net-misc/dhcp to net-misc/dhcpcd
+
   16 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   -cls-meta-10.0.ebuild, -cls-meta-10.0.1.ebuild, -cls-meta-10.2-r1.ebuild,
   -cls-meta-10.3.91.ebuild:
